--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
-.App {
+.counter {
   text-align: center;
+  font-family: "Montserrat", sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.counter-value {
+  padding: 10px;
+  margin: 10px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn {
+  background-color: rgb(81, 81, 196);
+  color: rgb(250, 250, 250);
+  width: 30px;
+  height: 30px;
+  border-radius: 3px;
+  border: none;
+  font-size: 25px;
+  font-weight: bold;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.reset-btn {
+  background-color: rgb(81, 81, 196);
+  color: rgb(250, 250, 250);
+  border-radius: 3px;
+  border: none;
+  font-size: 25px;
+  font-weight: bold;
 }
